--- a/RESERVASI_HOTEL/RESERVASI_HOTEL.csproj
+++ b/RESERVASI_HOTEL/RESERVASI_HOTEL.csproj
@@ -52,8 +52,29 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormDataKamar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDataKamar.Designer.cs">
+      <DependentUpon>FormDataKamar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormTambahDataKamar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTambahDataKamar.Designer.cs">
+      <DependentUpon>FormTambahDataKamar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDataKamar.resx">
+      <DependentUpon>FormDataKamar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTambahDataKamar.resx">
+      <DependentUpon>FormTambahDataKamar.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
