--- a/RESERVASI_HOTEL/RESERVASI_HOTEL.csproj
+++ b/RESERVASI_HOTEL/RESERVASI_HOTEL.csproj
@@ -76,6 +76,12 @@
     <Compile Include="FormTambahDataResepsionis.Designer.cs">
       <DependentUpon>FormTambahDataResepsionis.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTest.Designer.cs">
+      <DependentUpon>FormTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAddDataCustomer.resx">
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormTambahDataResepsionis.resx">
       <DependentUpon>FormTambahDataResepsionis.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTest.resx">
+      <DependentUpon>FormTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
