--- a/RESERVASI_HOTEL/RESERVASI_HOTEL.csproj
+++ b/RESERVASI_HOTEL/RESERVASI_HOTEL.csproj
@@ -64,6 +64,12 @@
     <Compile Include="FormDataCustomer.Designer.cs">
       <DependentUpon>FormDataCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormDataKamar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDataKamar.Designer.cs">
+      <DependentUpon>FormDataKamar.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormDataResepsionis.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormDataCustomer.resx">
       <DependentUpon>FormDataCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDataKamar.resx">
+      <DependentUpon>FormDataKamar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormDataResepsionis.resx">
       <DependentUpon>FormDataResepsionis.cs</DependentUpon>
