--- a/RESERVASI_HOTEL/RESERVASI_HOTEL.csproj
+++ b/RESERVASI_HOTEL/RESERVASI_HOTEL.csproj
@@ -107,6 +107,12 @@
     <Compile Include="FormTambahDataResepsionis.Designer.cs">
       <DependentUpon>FormTambahDataResepsionis.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTambahDataTransaksi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTambahDataTransaksi.Designer.cs">
+      <DependentUpon>FormTambahDataTransaksi.cs</DependentUpon>
+    </Compile>
     <Compile Include="Koneksi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -139,6 +145,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormTambahDataResepsionis.resx">
       <DependentUpon>FormTambahDataResepsionis.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTambahDataTransaksi.resx">
+      <DependentUpon>FormTambahDataTransaksi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
