--- a/RESERVASI_HOTEL/App.config
+++ b/RESERVASI_HOTEL/App.config
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="RESERVASI_HOTEL.Properties.Settings.HOTELConnectionString"
+            connectionString="Data Source=LAPTOP-5NNB4625\SQLEXPRESS;Initial Catalog=HOTEL;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
